# hidden-gem

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  start_app.sh
.claude/: settings.local.json
backend/: pyproject.toml
backend/src/backend/: content_scoring.py  db.py  gem_finder.py  main.py  models.py
backend/static/: app.js  index.html  style.css
config/: logging_setup.py  minio_client.py  settings.py  settings.yaml
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/macros/: generate_schema_name.sql
dbt_project/models/gold/: dim_games.sql  gold.yml  tag_idf.sql
dbt_project/models/silver/: game_genres.sql  game_keywords.sql  game_themes.sql  games.sql  genres.sql  keywords.sql  screenshots.sql  silver.yml  themes.sql
dbt_project/models/staging/: sources.yml  stg_games.sql
docker/: backend.Dockerfile  dagster.Dockerfile  dagster.yaml
docker/postgres-init/: 01-schemas.sql  02-pgvector.sql
embeddings/: pyproject.toml
embeddings/src/embeddings/: __main__.py  igdb_images.py  image_model.py  pipeline.py  silver_reader.py  store.py  text_model.py
extraction/: pyproject.toml
extraction/src/extraction/: __main__.py  bronze_writer.py  igdb_auth.py  igdb_client.py  pipeline.py  watermark.py
notebooks/: pyproject.toml
orchestration/: pyproject.toml
orchestration/src/orchestration/: dbt.py  definitions.py  schedules.py
orchestration/src/orchestration/assets/: bronze.py  embeddings.py  quality.py
quality/: pyproject.toml
quality/src/quality/: __main__.py  bronze_reader.py  expectations.py  pipeline.py
