[project]
name = "hidden-gem-config"
version = "0.1.0"
description = "Shared typed settings for the hidden-gem ETL pipeline"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.9", "pydantic-settings>=2.6", "pyyaml>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config"]

[tool.uv.workspace]
members = ["extraction", "orchestration", "backend", "notebooks", "embeddings", "quality"]

[tool.uv.sources]
hidden-gem-config = { workspace = true }
