[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend serving game search and hidden-gem recommendations"
requires-python = ">=3.12"
dependencies = [
    "hidden-gem-config",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "psycopg[binary]>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.uv.sources]
hidden-gem-config = { workspace = true }
