[project]
name = "embeddings"
version = "0.1.0"
description = "Precomputes NLP/CV embeddings for games (summary, storyline, cover art, screenshots)"
requires-python = ">=3.12"
dependencies = [
    "hidden-gem-config",
    "sentence-transformers>=3.2",
    "transformers>=4.45",
    "torch>=2.4",
    "pillow>=10.4",
    "requests>=2.32",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "numpy>=1.26",
    "boto3>=1.35",
    "polars>=1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/embeddings"]

[tool.uv.sources]
hidden-gem-config = { workspace = true }
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
