[project]
name = "extraction"
version = "0.1.0"
description = "IGDB extraction: pulls games from IGDB and writes bronze JSON to MinIO"
requires-python = ">=3.12"
dependencies = [
    "hidden-gem-config",
    "requests>=2.32",
    "boto3>=1.35",
    "psycopg[binary]>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/extraction"]

[tool.uv.sources]
hidden-gem-config = { workspace = true }
