[project]
name = "orchestration"
version = "0.1.0"
description = "Dagster project orchestrating IGDB extraction and the dbt-duckdb transform"
requires-python = ">=3.12"
dependencies = [
    "hidden-gem-config",
    "extraction",
    "embeddings",
    "quality",
    "dagster>=1.9",
    "dagster-webserver>=1.9",
    "dagster-postgres>=0.25",
    "dagster-dbt>=0.25",
    "dbt-core>=1.8",
    "dbt-duckdb>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestration"]

[tool.uv.sources]
hidden-gem-config = { workspace = true }
extraction = { workspace = true }
embeddings = { workspace = true }
quality = { workspace = true }

[tool.dagster]
module_name = "orchestration.definitions"
