[project]
name = "quality"
version = "0.1.0"
description = "Great Expectations validation of the raw IGDB bronze pull"
requires-python = ">=3.12"
dependencies = [
    "hidden-gem-config",
    "great-expectations>=1.0",
    "pandas>=2.2",
    "boto3>=1.35",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quality"]

[tool.uv.sources]
hidden-gem-config = { workspace = true }
